Bug 470114 - Unable to connect using telnet: ArrayOutOfBoundsException
Change-Id: I0089b5a0ad3d3bb894f5fd0aa0e280b700a3e22e
Signed-off-by: Anton Leherbauer <anton.leherbauer@windriver.com>